# study

./: .gitignore  .gitmodules  MarkDown.ipynb  README.md
C++/: 1. Типы данных.ipynb  10. Указатели и Ссылки.ipynb  11. Работа с файлами.ipynb  12.  struct Структуры данных.ipynb  13. enum Перечесления.ipynb  14. try catch Отлов ошибок.ipynb  16. Шо такэ ООП?.ipynb  17. Создание классов и объектов.ipynb  18. Конструкторы, Деструкторы, this.ipynb  19. Дружественная функция.ipynb  2. if-else. switch-case.ipynb  20. Дружественные классы.ipynb  21. Наследование классов.ipynb  22.  Шаблоны функций, классов.ipynb  3. Случайные числа.ipynb  4. for, while, do while.ipynb  5. Массивы данных.ipynb  6. Динамические массивы.ipynb  7. Строки.ipynb  8. Функции.ipynb  9. Перегрузка функций.ipynb  Lesson_1.ipynb  Lesson_2.ipynb  Lesson_3.ipynb  Useful_func.ipynb  main.cpp  test1  test1.cpp  ПРИБЛУДЫ.ipynb
C++/Tasks/Task 2.3/: task_2.3  task_2.3.cpp
C++/Tasks/Task 2.4.1/: task_2.4.1  task_2.4.1.cpp
C++/Tasks/Task 2.4.2/: task_2.4.2  task_2.4.2.cpp
C++/tests/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  Tests  Tests.cpp  calculator.cpp  cmake_install.cmake  test1  test1.cpp
CG/lab1/doc/: report.tex
CG/lab1/src/: a.out  main.cpp
CG/lab2/doc/: report.tex
CG/lab2/src/: a.out  main.cpp
CG/lab3-4/doc/: report_4.tex
CG/lab3-4/src/: main.cpp
CG/lab3/doc/: report_3.tex
CG/lab3/src/: a.out
CG/lab4/doc/: report_4.tex
CG/lab4/src/: CMakeLists.txt  main.cpp
CG/lab5/src/: CMakeLists.txt  main.cpp
CG/useful/: Полезные ссылки и примеры.docx
Discrete_Analysis/: lab_1.cpp  porazryadnaya_sort.cpp
Discrete_Analysis/kp/: copy  copy.cpp  main.cpp  test.py
Discrete_Analysis/lab1/: .gitignore  file_test.py  main.cpp  otchet.tex
Discrete_Analysis/lab2/: main.cpp
Discrete_Analysis/lab3/: profiling.txt
Discrete_Analysis/lab4/: main.cpp
Discrete_Analysis/lab5/: main.cpp
Discrete_Analysis/lab8/: main.cpp
Discrete_Analysis/lab9/: copy1.cpp  copy2.cpp  main.cpp
FLP/Prolog/: Test.pl
FuncProg/: equations.fsx  taylor.fsx
ML/: Practice 1 _ Pandas.ipynb
ML/lab1/: Lab1-6.ipynb
OOP/: Lection_12.09.ipynb
OOP/kek/: CMakeLists.txt  README.md  array.cpp  array.h  main.cpp  rectangle.cpp  rectangle.h  square.cpp  trapeze.cpp  trapeze.h
OOP/lab_01/: CMakeLists.txt  README.md  Tests.cpp  main.cpp  palindrom.cpp
OOP/lab_02/: CMakeLists.txt  README.md  Testcases.cpp  Tests.cpp  four.cpp  four.h  main.cpp  twelve.cpp  twelve.h
OOP/lab_03/: CMakeLists.txt  array.cpp  array.h  figure.h  main.cpp  rectangle.cpp  rectangle.h  square.cpp  square.h  tests.cpp  trapeze.cpp  trapeze.h
OOP/lab_04/: CMakeLists.txt  README.md  array.h  figure.h  main.cpp  rectangle.h  square.h  tests.cpp  trapeze.h
OOP/lab_05/: Allocator.h  CMakeLists.txt  List.h  main.cpp  tests.cpp
OOP/lab_06/: CMakeLists.txt  NPC.hpp  Observer.cpp  Observer.h  README.md  Visitor.cpp  Visitor.h  belka.cpp  belka.h  factory.cpp  factory.h  fight.cpp  fight.h  file.cpp  file.h  knight.cpp  knight.h  knight.hpp  main.cpp  npc.cpp  npc.h  npc_pair.cpp  npc_pair.h  pegas.cpp  pegas.h  pegas.hpp  squirrel.cpp  tests.cpp
OOP/lab_07/: CMakeLists.txt  FightManager.h  NPC.cpp  NPC.hpp  Observer.h  README.md  belka.cpp  belka.h  factory.cpp  factory.h  file.cpp  file.h  knight.cpp  knight.h  knight.hpp  main.cpp  npc.cpp  npc.h  pegas.cpp  pegas.h  pegas.hpp  squirrel.cpp  squirrel.hpp
OOP/lections/: Lection_21.10.ipynb
OS/: report.docx
OS/lab_01/: CMakeLists.txt  GoogleTests.cpp  child.c  main.c  test1.txt
OS/lab_01_old/: CMakeLists.txt  child.c  main.c
OS/lab_02/: main.c
OS/lections/: 03.10.23.ipynb
Python/: arr.ipynb  str.ipynb
TerMeh/lab_01/: main.py  report.docx
TerMeh/lab_02/: main.py  report.docx
TerMeh/lab_03/: main.py  report.docx  Лаборатоная работа 3 Мусаелян Ярослав М8О-207Б-21.docx
(+32 files in other folders)
